--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
 @import '../node_modules/@angular/material/prebuilt-themes/indigo-pink.css';
+@import '../node_modules/roboto-fontface/css/roboto/roboto-fontface.css';
+@import "global-style";
+
+* {
+  box-sizing: border-box;
+  border-color: getColor(border);
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, sans-serif;
+  color: getColor(primary);
+}
