--- a/src/app/shared/components/page/page.component.html
+++ b/src/app/shared/components/page/page.component.html
@@ -3,5 +3,5 @@
   <ng-content/>
 </div>
 <div *ngIf="!loaded" class="loading-spinner">
-  <mat-spinner diameter="300" strokeWidth="1"/>
+  <app-loading-spinner/>
 </div>
