Login form with validation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,7 @@
       <app-nav-bar/>
     </div>
     <div class="content">
-      <app-page [loaded]="true" [title]="'Example page'">
-        Hello darkness my old friend
-      </app-page>
+      <app-login-page/>
     </div>
   </div>
 
