--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,15 @@ body {
   font-family: Roboto, sans-serif;
   color: getColor(primary);
 }
+
+form {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+
+  button {
+    margin-top: 1rem;
+    width: 100%;
+  }
+}
+
