--- a/src/app/layout/components/nav-bar/nav-bar.component.scss
+++ b/src/app/layout/components/nav-bar/nav-bar.component.scss
@@ -25,11 +25,11 @@
     border-right: none;
     background-color: inherit;
     cursor: pointer;
-    color: getColor(primary)
+    color: getColor(color)
   }
 
   button:hover {
-    background-color: getColor(primary);
+    background-color: getColor(color);
     color: getColor(background);
   }
 
