--- a/src/app/layout/components/top-bar/top-bar.component.scss
+++ b/src/app/layout/components/top-bar/top-bar.component.scss
@@ -7,6 +7,8 @@
   padding: 0 1rem;
   border-bottom-width: .1rem;
   border-bottom-style: solid;
+  background-color: #001f3f;
+  color: white;
 }
 
 .logo {
