Authentication - service, store, guard and http interceptor

--- a/src/app/layout/components/nav-bar/nav-bar.component.html
+++ b/src/app/layout/components/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <p>Home</p>
-  <button>Link1</button>
-  <button>Link2</button>
+  <button (click)="navigateTo('/')">Home</button>
+  <button (click)="navigateTo('/login')">Login</button>
   <button>Link3</button>
   <p>Section1</p>
   <button>Link1</button>
