--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
       <app-nav-bar/>
     </div>
     <div class="content">
-      <app-login-page/>
+      <router-outlet></router-outlet>
     </div>
   </div>
 
