--- a/src/app/layout/components/top-bar/top-bar.component.html
+++ b/src/app/layout/components/top-bar/top-bar.component.html
@@ -1,4 +1,6 @@
 <div class="container">
   <div class="title">PCzech</div>
-  <div class="">login form</div>
+  <div class="authentication-info">
+    <app-authentication-info/>
+  </div>
 </div>
