Form for register page

--- a/src/app/authentication/pages/login-page/login-page.component.html
+++ b/src/app/authentication/pages/login-page/login-page.component.html
@@ -12,4 +12,8 @@
     </mat-form-field>
     <button color="primary" mat-raised-button>Zaloguj</button>
   </form>
+  <p>Jeżeli nie masz konta</p>
+  <form (ngSubmit)="goToRegister()">
+    <button color="accent" mat-raised-button>Rejestracja</button>
+  </form>
 </app-page>
