--- a/src/app/layout/components/nav-bar/nav-bar.component.html
+++ b/src/app/layout/components/nav-bar/nav-bar.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <p>Home</p>
   <button (click)="navigateTo('/')">Home</button>
-  <button (click)="navigateTo('/login')">Login</button>
-  <button>Link3</button>
+  <button (click)="navigateTo('/login')">Logowanie</button>
+  <button (click)="navigateTo('/register')">Rejestracja</button>
   <p>Section1</p>
   <button>Link1</button>
   <button>Link2</button>
