--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,8 +14,15 @@ body {
   background-color: getColor(background);
 }
 
+.form-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 form {
-  width: 30%;
+  width: 40%;
   display: flex;
   flex-direction: column;
 
