--- a/src/app/authentication/pages/register-page/register-page.component.html
+++ b/src/app/authentication/pages/register-page/register-page.component.html
@@ -1,3 +1,3 @@
 <app-page title="Rejestracja">
-  <!--  <app-register-form [registerForm]="registerForm"/>-->
+  <app-register-form (userRegistered)="registerUser()" [registerForm]="registerForm"/>
 </app-page>
