Admin guard and structural directive for displaying admin content

--- a/src/app/authentication/pages/register-confirmation-page/register-confirmation-page.component.html
+++ b/src/app/authentication/pages/register-confirmation-page/register-confirmation-page.component.html
@@ -1,3 +1,4 @@
 <app-page title="Potwierdzenie rejestracji">
-  <app-register-confirmation-form [registerConfirmationForm]="registerConfirmationForm"/>
+  <app-register-confirmation-form (registrationConfirmed)="confirmRegistration()"
+                                  [registerConfirmationForm]="registerConfirmationForm"/>
 </app-page>
