--- a/src/app/shared/components/statement/statement.component.scss
+++ b/src/app/shared/components/statement/statement.component.scss
@@ -1,6 +1,7 @@
 @import "src/global-style";
 
 .container {
+  padding: 2rem;
   position: absolute;
   bottom: 1rem;
   right: 1rem;
@@ -15,6 +16,7 @@
   justify-content: center;
   align-items: center;
   font-size: x-large;
+  text-align: center;
 }
 
 .error {
