Added pipe and directive for "yes or no" boolean cases

--- a/src/app/authentication/pages/users-page/users-page.component.html
+++ b/src/app/authentication/pages/users-page/users-page.component.html
@@ -1,1 +1,5 @@
-<app-page title="Użytkownicy"></app-page>
+<app-page title="Użytkownicy">
+  <ng-container *ngIf="users$ | async as users">
+    <app-users-list [users]="users"/>
+  </ng-container>
+</app-page>
