--- a/src/app/layout/components/nav-bar/nav-bar.component.html
+++ b/src/app/layout/components/nav-bar/nav-bar.component.html
@@ -1,10 +1,10 @@
 <div class="container">
   <p>Home</p>
   <button (click)="navigateTo('/')">Home</button>
-  <button (click)="navigateTo('/login')">Logowanie</button>
-  <button (click)="navigateTo('/register')">Rejestracja</button>
+  <button (click)="navigateTo('/auth/login')">Logowanie</button>
+  <button (click)="navigateTo('/auth/register')">Rejestracja</button>
   <p *appIsAdmin>Panel administratora</p>
-  <button (click)="navigateTo('/users')" *appIsAdmin>Użytkownicy</button>
+  <button (click)="navigateTo('/auth/users')" *appIsAdmin>Użytkownicy</button>
 
   <p>Section1</p>
   <button>Link1</button>
