--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,3 +64,12 @@ tbody {
   }
 }
 
+mat-tab-header {
+  margin-bottom: 1rem;
+}
+
+.center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
