--- a/src/app/authentication/pages/user-details-page/user-details-page.component.html
+++ b/src/app/authentication/pages/user-details-page/user-details-page.component.html
@@ -1,9 +1,11 @@
 <ng-container *ngIf="user$ | async as user">
-  <mat-tab-group>
+  <mat-tab-group [(selectedIndex)]="tabIndex">
     <mat-tab label="Informacje">
       <app-user-details-info [user]="user"/>
     </mat-tab>
-    <mat-tab label="Aktywuj"></mat-tab>
+    <mat-tab label="Aktywuj">
+      <app-user-activate (activationChanged)="changeActivation($event)" [user]="user"></app-user-activate>
+    </mat-tab>
     <mat-tab label="Zmień role"></mat-tab>
     <mat-tab label="Usuń">
       <app-user-delete (userDeleted)="deleteUser($event)" [user]="user"/>
