--- a/src/app/authentication/pages/user-details-page/user-details-page.component.html
+++ b/src/app/authentication/pages/user-details-page/user-details-page.component.html
@@ -6,7 +6,9 @@
     <mat-tab label="Aktywuj">
       <app-user-activate (activationChanged)="changeActivation($event)" [user]="user"></app-user-activate>
     </mat-tab>
-    <mat-tab label="Zmień role"></mat-tab>
+    <mat-tab label="Zmień role">
+      <app-user-change-role-form (roleChanged)="changeRole($event)" [user]="user"/>
+    </mat-tab>
     <mat-tab label="Usuń">
       <app-user-delete (userDeleted)="deleteUser($event)" [user]="user"/>
     </mat-tab>
